src/objects/Account_Planning__c.object
<CustomObject>
    <description>This new object / related list will be the place in which school &amp;/or lender CMs will post annual account plans.</description>
    <fields>
        <fullName>ASA_Customer_Since__c</fullName>
        <inlineHelpText>This field shows when this customer began doing business with ASA.</inlineHelpText>
        <label>ASA Customer Since</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Lead_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the person responsible for leading the Account Plan.</description>
        <inlineHelpText>This field contains the person responsible for leading the Account Plan.</inlineHelpText>
        <label>Account Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N60000001Y74OEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field displays the current account for which the plan is being reported.</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N60000001Y5A0EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field shows the name of the Client Manager for this account.</description>
        <inlineHelpText>This field contains the name of the School Client Manager for this account.</inlineHelpText>
        <label>Account Owner/Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N60000001Y3PlEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_G1_Tactic_1__c</fullName>
        <description>This field contains the tactic to support the strategy for the goal being reported.</description>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>1st Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_G1_Tactic_2nd__c</fullName>
        <description>This field contains an additional tactic for the strategy of the goal being reported.</description>
        <inlineHelpText>This field contains an additional tactic for the strategy of the goal being reported.</inlineHelpText>
        <label>2nd Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_G1_Tactic_3__c</fullName>
        <description>This field contains an additional tactic for the strategy of the goal being reported.</description>
        <inlineHelpText>This field contains an additional tactic for the strategy of the goal being reported.</inlineHelpText>
        <label>3rd Tactic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CM_G2_1st_Tactic__c</fullName>
        <description>This field contains the tactic to support the strategy for the goal being reported.</description>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>1st Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_G2_2nd_Tactic__c</fullName>
        <description>This field contains an additional tactic to support the strategy for the goal being reported.</description>
        <inlineHelpText>This field contains an additional tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>2nd Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_G2_3rd_Tactic__c</fullName>
        <description>This field contains an additional tactic to support the strategy for the goal being reported.</description>
        <inlineHelpText>This field contains an additional tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>3rd Tactic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSA_Rep__c</fullName>
        <description>This field contains either the name or the extension of the Client Services Associate who supports this account.</description>
        <inlineHelpText>This field contains either the name or the extension of the Client Services Associate who supports this account.</inlineHelpText>
        <label>CSA Rep</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campus Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comm_Internal_1st_Tactic__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>1st Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comms_External_Strategy_2__c</fullName>
        <description>This field contains the strategy used to integrate a communication plan that works for all parties.
Communications - External</description>
        <inlineHelpText>This field contains the strategy used to integrate a communication plan that works for all parties.

Calls, face to face visits, email ASA communications, etc.</inlineHelpText>
        <label>Customer Comms - External Strategy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comms_External__c</fullName>
        <description>This field contains the strategy used to integrate a communication plan that works for all parties. 
Communications - External</description>
        <inlineHelpText>This field contains the strategy used to integrate a communication plan that works for all parties.</inlineHelpText>
        <label>Comms External</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comms_Internal_2nd_tactic__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>2nd tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comms_Internal_3rd_Tactic__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>3rd Tactic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comms_Internal__c</fullName>
        <description>This field will contain the goal which is specific to the Communications plan for Internal parties.</description>
        <inlineHelpText>This field will contain the goal which is specific to the Communications plan for Internal parties.

What is important that we share? To whom?, How often?, What mode?</inlineHelpText>
        <label>Communications Internal</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_1__c</fullName>
        <label>Goal 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_2__c</fullName>
        <label>Goal 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_3__c</fullName>
        <label>Goal 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Information__c</fullName>
        <description>This field contains all of the key information for this account.</description>
        <inlineHelpText>This field contains all of the key information for this account.</inlineHelpText>
        <label>Key Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OE_Code__c</fullName>
        <description>This field contains the OE Code of the Account for which this plan is being reported.</description>
        <inlineHelpText>This field contains the OE Code of the Account for which this plan is being reported.</inlineHelpText>
        <label>OE Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Goal__c</fullName>
        <description>This field will contain the goal which is specific to the Client Manager and is optional.</description>
        <inlineHelpText>This field will contain the goal which is specific to the Client Manager and is optional.
What is important that we share? To whom?, How often?, What mode?</inlineHelpText>
        <label>Optional Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Summary__c</fullName>
        <description>This field contains the summary information of the plan for this account</description>
        <inlineHelpText>This field contains the summary information of the plan for this account.  

REMINDER: Please complete this section last.</inlineHelpText>
        <label>Plan Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Opp_Strategy__c</fullName>
        <inlineHelpText>This field contains the strategy for the goal: Process Opportunity</inlineHelpText>
        <label>Process Opportunity Strategy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prods_Services_del__c</fullName>
        <description>This field contains the strategy used to determine what Products &amp; Services an account is interested in using.</description>
        <inlineHelpText>This field contains the strategy used to determine what Products &amp; Services an account is interested in using.</inlineHelpText>
        <label>Prods Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prods_Svcs_Strategy__c</fullName>
        <description>This field contains the strategy used to determine what Products &amp; Services an account is interested in using.
Prods and Svcs</description>
        <inlineHelpText>This field contains the strategy used to determine what Products &amp; Services an account is interested in using.</inlineHelpText>
        <label>Products and Services Strategy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SALT_Contract_Executed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field pulls in the SALT Contract Executed date from the account.</description>
        <label>SALT Contract Executed</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Planning (SALT_Contract_Executed__c)</relationshipLabel>
        <relationshipName>Account_Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLP_Strategy__c</fullName>
        <description>This field contains the strategy for goal: Strategic Lender Services</description>
        <inlineHelpText>This field contains the strategy for goal: Strategic Lender Services</inlineHelpText>
        <label>SLP Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLS_Internal_Strategy__c</fullName>
        <inlineHelpText>This field contains the strategy for goal: Strategic Lender Services</inlineHelpText>
        <label>SLS Strategy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_W_O_T_T__c</fullName>
        <description>This field contains all of the information for:
Strengths, Weaknesses, Opportunities, Threats and Trends</description>
        <inlineHelpText>This field contains all of the information for:
Strengths, Weaknesses, Opportunities, Threats and Trends</inlineHelpText>
        <label>S.W.O.T.T.</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vol_Strategy__c</fullName>
        <label>Vol Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Volume_Strategy__c</fullName>
        <description>This field contains the strategy used to determine if the account will result in an opportunity for New/Additional or retention of volume.</description>
        <inlineHelpText>This field contains the strategy used to determine if the account will result in an opportunity for New/Additional or retention of volume.</inlineHelpText>
        <label>Volume Strategy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_client_initially_chose_SALT__c</fullName>
        <description>This field contains text which describes why this school/lender initially chose to work with ASA.</description>
        <inlineHelpText>This field contains text which describes why this school/lender initially chose to work with ASA.</inlineHelpText>
        <label>Why client initially chose SALT</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Quarter_Check_in__c</fullName>
        <label>1st Quarter Check-in</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Tactic_BD_3_1__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>1st Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Tactic_BD_4_1__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>1st Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Tactic_BD_5_1__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>1st Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2nd_Quarter_Check_in__c</fullName>
        <label>2nd Quarter Check-in</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Tactic_BD_3_2__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>2nd Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2nd_Tactic_BD_4_2__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>2nd Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2nd_Tactic_BD_5_2__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>2nd Tactic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3rd_Quarter_Check_in__c</fullName>
        <label>3rd Quarter Check-in</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Tactic_BD_3_3__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>3rd Tactic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3rd_Tactic_BD_4_3__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>3rd Tactic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3rd_Tactic_BD_5_3__c</fullName>
        <inlineHelpText>This field contains the tactic to support the strategy for the goal being reported.</inlineHelpText>
        <label>3rd Tactic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_End_Review__c</fullName>
        <label>Year End Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>regional_account_executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the Regional Account Executive responsible for this account.</description>
        <inlineHelpText>This field contains the Regional Account Executive responsible for this account.</inlineHelpText>
        <label>Regional Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N60000001Y3PqEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Planning</label>
    <listViews>
        <fullName>AllAccountPlans</fullName>
        <columns>Account_Name_2__c</columns>
        <columns>NAME</columns>
        <columns>regional_account_executive__c</columns>
        <columns>Account_Owner_Client_Manager__c</columns>
        <columns>CSA_Rep__c</columns>
        <columns>Account_Lead_del__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Plans</label>
    </listViews>
    <listViews>
        <fullName>All_2009_Account_Plans</fullName>
        <columns>NAME</columns>
        <columns>Account_Name_2__c</columns>
        <columns>OE_Code__c</columns>
        <columns>regional_account_executive__c</columns>
        <columns>Account_Owner_Client_Manager__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2009</value>
        </filters>
        <label>All 2009 Account Plans</label>
    </listViews>
    <nameField>
        <label>Account Plan Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Planning</pluralLabel>
    <recordTypes>
        <fullName>AccountPlanFY09</fullName>
        <active>true</active>
        <label>Account Plan FY 09</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Name</fullName>
        <active>true</active>
        <description>The Account plan name must contain the current year being reported.</description>
        <errorConditionFormula>NOT(
     OR(
         CONTAINS(Name, &quot;2013&quot;),
          CONTAINS(Name, &quot;2014&quot;)
           )
         )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The name of the Account Plan must contain the current or upcoming year.</errorMessage>
    </validationRules>
</CustomObject>